--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React Weather</title>
-    <script src="https://maps.googleapis.com/maps/api/js?&v=3.exp&libraries=geometry,drawing,places"></script>
   </head>
   <body>
     <noscript>
@@ -37,5 +36,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing,places&key=AIzaSyB3lFMeUQ3ZYY8aFbuK_BTJ_Oq1L2u0ev0"></script>
   </body>
 </html>
