--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,21 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing,places&key=AIzaSyB3lFMeUQ3ZYY8aFbuK_BTJ_Oq1L2u0ev0"></script>
+    <script type="application/ld+json">
+    {
+    	"@context": "http://schema.org",
+    	"@type": "WebSite",
+    	"url": "https://weather.demo.samuelli.net/",
+    	"name": "React Weather",
+    	"author": {
+    		"@type": "Person",
+        "name": "Samuel Li",
+        "email": "samli@samuelli.net",
+        "jobTitle": "Developer",
+        "url": "https://github.com/hingyeung/"
+    	},
+    	"description": "A demo React/Redux web application that shows the current weather of the user's location."
+    }
+    </script>
   </body>
 </html>
